syntax = "proto3";

package com.example.internalapi.request.author.find_all.proto;

option java_multiple_files = true;

import "com/example/internalapi/model/author.proto";

message FindAllAuthorsRequest {

}

message FindAllAuthorsResponse {
  oneof response {
    Success success = 1;
  }

  message Success {
    example.internalapi.model.AuthorList authors = 1;
  }
}
